Petición web de los artículos
Bosquejo inicial de como quedarían los artículos cargados. Falta ajustar formato aún.

--- a/products.html
+++ b/products.html
@@ -36,13 +36,8 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
-  </main>
+  <div class="row row-cols-1 row-cols-md-2 g-4" id="listado-articulos">
+  </div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
