--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </nav>
-  <div class="row row-cols-1 row-cols-md-2 g-4" id="listado-articulos">
+  <div class="row row-cols-1 row-cols-md-2 g-4 p-5 justify-content-center d-flex" id="listado-articulos">
   </div>
   <footer class="text-muted">
     <div class="container">
