--- a/products.html
+++ b/products.html
@@ -36,8 +36,11 @@
       </div>
     </div>
   </nav>
+  <div class="text-center p-4" id="div-titulo-cat">
+  </div>
   <div class="row row-cols-1 row-cols-md-2 g-4 p-5 justify-content-center d-flex" id="listado-articulos">
   </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
