--- a/cart.html
+++ b/cart.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
           </li>
         </ul>
       </div>
