--- a/sell.html
+++ b/sell.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,6 +31,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
           </li>
         </ul>
       </div>
