--- a/login.html
+++ b/login.html
@@ -17,14 +17,37 @@
   </style>
 </head>
 
-<body>
-  <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+<body id="coverLogin">
+  <div class="identificadorContainer">
+    <div id="login">
+    <div id="carrito2"><img id="carrito" src="img/carrito.png" alt=""></div>
+  
+    <form>
+      <div class="mb-3">
+        <label for="usuario" class="form-label">Usuario</label>
+        <input type="text" class="form-control" id="usuario" required>
       </div>
+  
+      <div class="mb-3">
+       <label for="contraseña" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="contraseña" required>
+      </div>
+  
+    <!-- <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+    </div> -->  
+  
+    <div id="botonLogin">
+      <button id="botonLogin2"  type="submit" class="btn"><b>Ingresar</b></button>
     </div>
-  </main>
+      
+    </form>
+  </div>
+</div>
+
+  
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
