--- a/products.html
+++ b/products.html
@@ -40,6 +40,7 @@
   </nav>
   <div class="text-center p-4" id="div-titulo-cat">
   </div>
+  <div id="breadcrumb-cat"></div>
   <div class="row row-cols-1 row-cols-md-2 g-4 p-5 justify-content-center d-flex" id="listado-articulos">
   </div>
 
