Borrar el ID "identificadorContainer" ya que no tenia uso

--- a/login.html
+++ b/login.html
@@ -18,9 +18,8 @@
 </head>
 
 <body id="coverLogin">
-  <div class="identificadorContainer">
     <div id="login">
-    <div id="carrito2"><img id="carrito" src="img/carrito.png" alt=""></div>
+    <div id="carrito2"><img id="carrito" src="img/carrito.png" alt="">
   
     <form>
       <div class="mb-3">
