Agregando el div sin el ID "identificadorContainer" ya que altera la posicion de la imagen

--- a/login.html
+++ b/login.html
@@ -18,8 +18,9 @@
 </head>
 
 <body id="coverLogin">
+  <div>
     <div id="login">
-    <div id="carrito2"><img id="carrito" src="img/carrito.png" alt="">
+    <div id="carrito2"><img id="carrito" src="img/carrito.png" alt=""></div>
   
     <form>
       <div class="mb-3">
