--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 </head>
 
 <body id="coverLogin">
-  <div>
+  <div id="identificadorContainer>
     <div id="login">
     <div id="carrito2"><img id="carrito" src="img/carrito.png" alt=""></div>
   
