--- a/login.html
+++ b/login.html
@@ -15,10 +15,13 @@
       background-color: rgb(248, 249, 250);
     }
   </style>
+
+  <!-- link de bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body id="coverLogin">
-  <div class="identificadorContainer">
+<body id="coverLogin" >
+  <div class="identificadorContainer" >
     <div id="login">
     <div id="carrito2"><img id="carrito" src="img/carrito.png" alt=""></div>
   
@@ -28,7 +31,7 @@
         <input type="text" class="form-control" id="usuario" required>
       </div>
   
-      <div class="mb-3">
+      <div class="mb-3 " >
        <label for="contraseña" class="form-label">Contraseña</label>
         <input type="password" class="form-control" id="contraseña" required>
       </div>
@@ -52,7 +55,9 @@
     </div>
   </footer>
   <script src="js/login.js"></script>
-  
+  <!-- link de bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
