--- a/products.html
+++ b/products.html
@@ -31,8 +31,8 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
+          <li class="nav-item" id="NombreUsuario">
+            <a class="nav-link" href="login.html" ><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
           </li>
         </ul>
       </div>
