--- a/categories.html
+++ b/categories.html
@@ -31,7 +31,7 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item inicio">
             <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
           </li>
         </ul>
@@ -102,6 +102,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/categories.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
