--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
+            <a class="nav-link" href="login.html" id="inicio"><i class="bi bi-person-fill"></i> </a>
           </li>
         </ul>
       </div>
