--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item" id="NombreUsuario">
+          <li class="nav-item inicio" >
             <a class="nav-link" href="login.html" ><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
           </li>
         </ul>
@@ -63,6 +63,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/products.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
