Mejora del responsive de products
Se agrega row-cols-lg-2 en lugar de row-cols-md-2, además de col-lg-5 en vez de col-md-5 para que en la vista de tablet aparezca una sola columna de cards dado que nos pareció se vería mejor. A su vez se agrega un justify-content-center d-flex para centrar el contenido dentro del grid.

--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
   <div class="text-center p-4" id="div-titulo-cat">
   </div>
   <div id="breadcrumb-cat"></div>
-  <div class="row row-cols-1 row-cols-md-2 g-4 p-5 justify-content-center d-flex" id="listado-articulos">
+  <div class="row row-cols-1 row-cols-lg-2 g-4 p-5 justify-content-center d-flex" id="listado-articulos">
   </div>
 
   <footer class="text-muted">
