--- a/products.html
+++ b/products.html
@@ -41,47 +41,56 @@
   <div class="text-center p-4" id="div-titulo-cat">
   </div>
 
-  <div id="buscador">
-    Buscar: <input type="search">
-  </div>
-  <div class="filter-bar">
+ 
+  
+  <div id="breadcrumb-cat"></div>
+ 
+ 
+  
+  <div class="pe-5 ps-5 pt-0 mb-0">
+    <div class="row align-items-center">
     <div class="row">
       <div class="col text-end">
         <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
           <input type="radio" class="btn-check" name="options" id="sortAsc">
-          <label class="btn btn-light" for="sortDesc"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+          <label class="btn btn-light btn-sm" for="sortDesc"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
           <input type="radio" class="btn-check" name="options" id="sortDesc">
-          <label class="btn btn-light" for="sortAsc"><i class="fas fa-sort-amount-up"></i>$</label>
+          <label class="btn btn-light btn-sm" for="sortAsc"><i class="fas fa-sort-amount-up"></i>$</label>
           <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
-          <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia</label>
+          <label class="btn btn-light btn-sm" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia</label>
         </div>
       </div>
     </div>
-    <br>
+    <div class="row"> 
+    <div class="col-auto" id="buscador">
+      Buscar: <input type="search">
+    </div>
+    <div class="col">
     <div class="row">
       <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
         <div class="row container p-0 m-0">
           <div class="col">
-            <p class="font-weight-normal text-end my-2">Precio:</p>
+            <p class="font-weight-normal text-end my-2 fs-6">Precio:</p>
           </div>
           <div class="col">
-            <input class="form-control" type="number" placeholder="min." id="rangeFilterPriceMin">
+            <input class="form-control form-control-sm" type="number" placeholder="min." id="rangeFilterPriceMin">
           </div>
           <div class="col">
-            <input class="form-control" type="number" placeholder="máx." id="rangeFilterPriceMax">
+            <input class="form-control form-control-sm" type="number" placeholder="máx." id="rangeFilterPriceMax">
           </div>
           <div class="col-3 p-0">
             <div class="btn-group" role="group">
-              <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+              <button class="btn btn-light btn-block btn-sm" id="rangeFilterCount">Filtrar</button>
               <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
             </div>
           </div>
         </div>
-      </div>    
+      </div>  
+    </div> 
+  </div>
+  </div>
     
   </div>  
-  
-  <div id="breadcrumb-cat"></div>
   <div class="row row-cols-1 row-cols-lg-2 g-4 p-5 justify-content-center d-flex" id="listado-articulos">
   </div>
 
