--- a/products.html
+++ b/products.html
@@ -52,10 +52,10 @@
     <div class="row">
       <div class="col text-end">
         <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
-          <input type="radio" class="btn-check" name="options" id="sortAsc">
-          <label class="btn btn-light btn-sm" for="sortAsc"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
           <input type="radio" class="btn-check" name="options" id="sortDesc">
-          <label class="btn btn-light btn-sm" for="sortDesc"><i class="fas fa-sort-amount-up"></i>$</label>
+          <label class="btn btn-light btn-sm" for="sortDesc"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+          <input type="radio" class="btn-check" name="options" id="sortAsc">
+          <label class="btn btn-light btn-sm" for="sortAsc"><i class="fas fa-sort-amount-up"></i>$</label>
           <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
           <label class="btn btn-light btn-sm" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia</label>
         </div>
