--- a/product-info.html
+++ b/product-info.html
@@ -38,13 +38,13 @@
       </div>
     </div>
   </nav>
+  
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+    <div id="containerProduct">
+
     </div>
   </main>
+  
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
