Se elimina función de mover carousel solo

--- a/product-info.html
+++ b/product-info.html
@@ -41,7 +41,7 @@
   
   
     <div id="containerProduct">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide">
         <div class="carousel-inner" id="imagenes">
           
         </div>
