--- a/product-info.html
+++ b/product-info.html
@@ -39,24 +39,31 @@
     </div>
   </nav>
   
-  
-    <div id="containerProduct">
-      <div id="carouselExampleControls" class="carousel slide">
-        <div class="carousel-inner" id="imagenes">
-          
+  <div class= "container mt-5">
+    <div class="row" >
+      <div class="col-md-8">
+        <div id="carouselExampleControls" class="carousel slide">
+          <div class="carousel-inner" id="imagenes">
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body" id="info">
+          </div>
+        </div>
+      </div> 
     </div>
-  
-  
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
