--- a/product-info.html
+++ b/product-info.html
@@ -38,11 +38,11 @@
       </div>
     </div>
   </nav>
-  
+  <div id="breadcrumb-cat" class="mt-5"></div>
   <div class= "container mt-5">
     <div class="row" >
       <div class="col-md-8">
-        <div id="carouselExampleControls" class="carousel slide">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-interval="false">
           <div class="carousel-inner" id="imagenes">
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
