--- a/products.html
+++ b/products.html
@@ -63,8 +63,9 @@
     </div>
     <div class="row"> 
     <div class="col-auto" id="buscador">
-      Buscar: <input type="search" id="buscar">
+      Buscar: <input type="search" id="buscar" placeholder="Buscar...">
     </div>
+    <div id="resultados"></div>
     <div class="col">
     <div class="row">
       <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
