--- a/products.html
+++ b/products.html
@@ -63,7 +63,7 @@
     </div>
     <div class="row"> 
     <div class="col-auto" id="buscador">
-      Buscar: <input type="search" id="buscar" placeholder="Buscar...">
+      Buscar: <input type="search" id="buscar">
     </div>
     <div id="resultados"></div>
     <div class="col">
