--- a/product-info.html
+++ b/product-info.html
@@ -64,6 +64,10 @@
     </div>
   </div>
 
+  <div class="list-group" id="comentarios-contenedor">
+
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
