Se agregan productos relacionados

--- a/product-info.html
+++ b/product-info.html
@@ -68,6 +68,10 @@
 
   </div>
 
+  <div class="card-group" id="productos-relacionados">
+
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
