--- a/product-info.html
+++ b/product-info.html
@@ -74,12 +74,12 @@
 
   <form>
     <div class="mb-3">
-      <label for="comentario" class="form-label">Comentario</label>
-      <input type="text" class="form-control" id="comentario" aria-describedby="comentario">
+      <label for="comentario-nuevo" class="form-label">Comentario</label>
+      <input type="text" class="form-control" id="comentario-nuevo" aria-describedby="comentario">
     </div>
     <div class="rating"> <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label> <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label> </div>
         </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" id="enviar-comentario" class="btn btn-primary">Submit</button>
   </form>
 
 
