--- a/product-info.html
+++ b/product-info.html
@@ -67,6 +67,9 @@
   <div class="list-group" id="comentarios-contenedor">
 
   </div>
+  <div class="list-group" id="comentarios-nuevos-contenedor"></div>
+
+  </div>
 
   <div class="card-group" id="productos-relacionados">
 
