--- a/products.html
+++ b/products.html
@@ -31,9 +31,18 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item " >
-            <a class="nav-link" href="login.html" id="inicio" ><i class="bi bi-person-fill"></i> </a>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html" id = "inicio"><i class="bi bi-person-fill"></i></a>
           </li>
+        </ul>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="dropdown-menu-button">
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+          <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+          <li><a class="dropdown-item" href="login.html" id="cerrar-sesion">Cerrar sesion</a></li>
         </ul>
       </div>
     </div>
