--- a/my-profile.html
+++ b/my-profile.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -24,6 +25,50 @@
         font-size: 3.5rem;
       }
     }
+
+    body {
+            transition: background-color 0.3s, color 0.3s;
+        }
+        
+        .day-mode {
+            background-color: white;
+            color: black;
+        }
+
+        .night-mode {
+            background-color: #121212; /* Fondo oscuro */
+            color: white; /* Texto claro */
+        }
+
+        .profile-container {
+            display: flex;
+            align-items: flex-start;
+            margin: 20px;
+        }
+
+        .profile-image {
+            width: 200px; /* Tamaño grande */
+            height: 200px;
+            border-radius: 50%;
+            margin-right: 30px; /* Espacio entre la imagen y los campos */
+        }
+
+        .form-container {
+            flex: 1; /* Ocupa el espacio restante */
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .toggle-button {
+            display: flex;
+            align-items: center;
+        }
+
+        .toggle-button input {
+            margin-right: 10px;
+        }
   </style>
 </head>
 
@@ -46,18 +91,58 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
+            <a class="nav-link" href="login.html" id = "inicio"><i class="bi bi-person-fill"></i></a>
           </li>
+        </ul>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="dropdown-menu-button">
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+          <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+          <li><a class="dropdown-item" href="login.html" id="cerrar-sesion">Cerrar sesion</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="profile-container">
+          <img src="https://via.placeholder.com/150" alt="Imagen de usuario" class="profile-image">
+          <div class="form-container">
+              <div class="form-group">
+                  <label for="username">Nombre de usuario:</label>
+                  <input type="text" id="username" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="second-name">Segundo nombre:</label>
+                  <input type="text" id="second-name" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="lastname">Apellido:</label>
+                  <input type="text" id="lastname" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="second-lastname">Segundo apellido:</label>
+                  <input type="text" id="second-lastname" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input type="email" id="email" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="phone">Teléfono de contacto:</label>
+                  <input type="tel" id="phone" class="form-control">
+              </div>
+              <div class="toggle-button">
+                  <input type="checkbox" id="toggle-mode">
+                  <label for="toggle-mode">Modo día/noche</label>
+              </div>
+              <button class="btn btn-primary mt-3" id="save-changes">Guardar cambios</button>
+          </div>
       </div>
-    </div>
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
@@ -70,6 +155,9 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
+  <script src="js/product-info.js"></script>
+  <script src="js/products.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
