--- a/sell.html
+++ b/sell.html
@@ -31,7 +31,15 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i> Iniciar Sesión</a>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="dropdown-menu-button"><i class="bi bi-person-fill"></i>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="login.html" id="cerrar-sesion">Cerrar sesion</a></li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
