--- a/my-profile.html
+++ b/my-profile.html
@@ -52,7 +52,7 @@
       <div class="profile-container">
         <div class="photo" style="text-align: center;">
           <img id="profileImage" src="https://via.placeholder.com/150" alt="Imagen de usuario" class="profile-image">
-          <label for="fileInput">Agregar foto de perfil:</label>
+          <label for="fileInput" class="btn btn-primary">Actualizar foto de perfil</label>
           <input type="file" id="fileInput" accept="image/*" style="display: none;">
         </div>
           
