--- a/my-profile.html
+++ b/my-profile.html
@@ -50,10 +50,12 @@
     <div class="container">
       <div id="alert"></div>
       <div class="profile-container">
-        <div class="photo" style="text-align: center;">
+        <div class="photo" id="contenedorFotoPerfil">
           <img id="profileImage" src="https://via.placeholder.com/150" alt="Imagen de usuario" class="profile-image">
+          <div id="fileBtnContainer">
           <label for="fileInput" class="btn btn-primary">Actualizar foto de perfil</label>
           <input type="file" id="fileInput" accept="image/*" style="display: none;">
+          </div>
         </div>
           
           <div class="form-container">
