Corrección de error y validación inputs tarjeta

--- a/cart.html
+++ b/cart.html
@@ -136,7 +136,7 @@
                 <form id="formulario-tarjeta" style="display: none;">
                   <div class="form-group mt-3">
                     <label for="numero-tarjeta" class="form-label">Número:</label>
-                    <input type="text" id="numero-tarjeta" name="numero-tarjeta" class="form-control">
+                    <input type="text" id="numero-tarjeta" name="numero-tarjeta" class="form-control" minlength="16">
                   </div>
                   <div class="form-group mt-3">
                     <label for="fecha-tarjeta" class="form-label">Fecha de vencimiento:</label>
